syntax = "proto3";
package pb;

option go_package = "github.com/snple/kirara/pb;pb";

message Source {
    string id = 1;
    string device_id = 2;
    string name = 3;
    string desc = 4;
    string tags = 5;
    string type = 6;
    string source = 7;
    string params = 8;
    string config = 9;
    sint32 link = 10;
    sint32 status = 11;
    sint32 save = 12;
    int64 created = 13;
    int64 updated = 14;
    int64 deleted = 15;
}

message Tag {
    string id = 1;
    string device_id = 2;
    string source_id = 3;
    string name = 4;
    string desc = 5;
    string tags = 6;
    string type = 7;
    string data_type = 8;
    string address = 9;
    string value = 10;
    string h_value = 11;
    string l_value = 12;
    string config = 13;
    sint32 status = 14;
    sint32 access = 15;
    sint32 save = 16;
    int64 created = 17;
    int64 updated = 18;
    int64 deleted = 19;
}

message TagValue {
    string id = 1;
    string value = 2;
    int64 updated = 3;
}

message TagNameValue {
    string id = 1;
    string name = 2;
    string value = 3;
    int64 updated = 4;
}

message TagValueUpdated {
    string id = 1;
    string device_id = 2;
    string source_id = 3;
    string value = 4;
    int64 updated = 5;
}
